# plugin

./: BUILD_USAGE.md  CMAKE_LINK_USAGE.md  CMakeLists.txt  EXPORT_PLUGIN_USAGE.md  LINK_ERROR_SOLUTION.md  PROJECT_REFACTOR.md  README.md  SEPARATE_BUILD_GUIDE.md  STATIC_CLASS_USAGE.md  build.sh  build_all.sh  build_linked.sh  build_separate.sh  clean.sh
projectA/: CMakeLists.txt  PluginManager.cpp  main.cpp
projectA/include/: IPlugin.h  PluginManager.h  class_factory.h  params.h
projectA/src/: class_factory.cpp
projectB/: CMakeCache.txt  CMakeLists.txt  Makefile  MyPluginA.cpp  MyPluginA.h  MyPluginB.cpp  MyPluginB.h  cmake_install.cmake
projectX/: CMakeLists.txt  main.cpp
